--- a/css/styles.css
+++ b/css/styles.css
@@ -24,9 +24,12 @@ body {
 .column {
   width: 360px;
   float: left;
-  margin: 20px;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  margin-left: 20px;
 }
 
 .logo {
   margin: 20px;
+  padding: 10px;
 }
