--- a/css/styles.css
+++ b/css/styles.css
@@ -33,3 +33,37 @@ body {
   margin: 20px;
   padding: 10px;
 }
+
+@media screen and (min-width: 320px) and (max-width: 480px) {
+  body {
+    background-color: #efeded;
+  }
+
+    .column {
+      width: 260px;
+    }
+
+    .sidebar {
+      width: 260px;
+    }
+}
+
+  @media screen and (min-width: 480px) and (max-width: 840px) {
+    body {
+      background-color: #f7f7f7;
+    }
+
+    .column {
+      width: 300px;
+    }
+
+    .sidebar {
+      width: 300px;
+    }
+  }
+
+  @media screen and (min-width: 840px) and (max-width: 1800px) {
+    body {
+      background-color: white;
+    }
+  }
